[gd_scene load_steps=3 format=3 uid="uid://c0e3d2dliwtgd"]

[ext_resource type="Script" path="res://UI/Structures/Smog.gd" id="1_bitbo"]
[ext_resource type="Texture2D" uid="uid://dfvoffk3q1rfj" path="res://Assets/structures/minatures/absorber_smog.webp" id="2_feuer"]

[node name="Smog" type="PanelContainer"]
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -641.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_bitbo")

[node name="Icon" type="Control" parent="."]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="Icon"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
offset_top = -74.0
offset_right = 100.0
offset_bottom = 26.0
texture = ExtResource("2_feuer")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="name_label" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Name label"

[node name="coords_label" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "[12, 123]"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(2.08165e-12, 12)
layout_mode = 2
mouse_filter = 1

[node name="structure_short_info" type="Label" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
mouse_filter = 1
text = "Info: absorbs smog. We collect, decompose, and compose. We might extract some minerals from this all consuming clouds.  It will cost us some energy."
autowrap_mode = 3

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(2.08165e-12, 12)
layout_mode = 2
mouse_filter = 1

[node name="growing_state" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 1
text = "Growing"

[node name="grown" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RadiusHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/grown"]
auto_translate_mode = 1
layout_mode = 2

[node name="RadiusLabel" type="Label" parent="MarginContainer/VBoxContainer/grown/RadiusHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 1
text = "Radius: 5"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/grown/RadiusHBoxContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2
mouse_filter = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/grown/RadiusHBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
mouse_filter = 1

[node name="RadiusHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/grown/RadiusHBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
min_value = 1.0
max_value = 5.0
value = 2.0

[node name="processing_tiles" type="Label" parent="MarginContainer/VBoxContainer/grown"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 1
text = "Processing #tiles"

[node name="active_button" type="CheckButton" parent="MarginContainer/VBoxContainer/grown"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Go dormant, significantly slows down metabolic processes and growth, temporary halt in activity awaiting better conditions"
mouse_filter = 1
button_pressed = true
text = "Active"

[node name="last_energy_input" type="Label" parent="MarginContainer/VBoxContainer/grown"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "last energy 12"

[node name="last_enzymes_consumed" type="Label" parent="MarginContainer/VBoxContainer/grown"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 1
text = "Last enzymes 12"

[node name="last_minerals_output" type="Label" parent="MarginContainer/VBoxContainer/grown"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 1
text = "Last minerals consumed 12"

[node name="production_efficiency_label" type="Label" parent="MarginContainer/VBoxContainer/grown"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Prod efficiency"

[node name="missing_resources_for_full_capacity_label" type="Label" parent="MarginContainer/VBoxContainer/grown"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Missing resources"
